# bgfxSdl2ExampleWindowsDx11

./: CMakeLists.txt  README.md  main.cpp  main.h
assets/shaders/: compile.bat  fragment.glsl  varying.def.sc  vertex.glsl
libs/windows/debug/multi-threaded/: bimgDebug.lib  bimg_decodeDebug.lib  bimg_encodeDebug.lib  bxDebug.lib
libs/windows/debug/single-threaded/: bgfx-shared-libDebug.lib  bimgDebug.lib  bimg_decodeDebug.lib  bimg_encodeDebug.lib  bxDebug.lib  bxRelease.lib
